--- a/CondominioExpress/nbproject/private/private.properties
+++ b/CondominioExpress/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Tarc\u00edsio\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\F\u00e1bio\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
