--- a/CondominioExpress/nbproject/project.properties
+++ b/CondominioExpress/nbproject/project.properties
@@ -28,12 +28,14 @@ dist.jar=${dist.dir}/CondominioExpress.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.dom4j-1.6.1.jar=dom4j-1.6.1.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.0.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${file.reference.dom4j-1.6.1.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
