--- a/CondominioExpress/nbproject/private/private.properties
+++ b/CondominioExpress/nbproject/private/private.properties
@@ -1,2 +1,7 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+file.reference.mysql-connector-java-5.1.23-bin.jar=Z:\\Tarc\u00edsio\\Documents\\NetBeansProjects\\Condominio\\trunk\\CondominioExpress\\dom4j-1.6.1.jar
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\Tarc\u00edsio\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
